// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry component Component renders as expected When component loads, renders as expect 1`] = `
<div>
  <form>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <label
          for="firstName"
        >
          First name
        </label>
        <input
          class=""
          data-testid="firstNameInput"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
          value=""
        />
      </div>
      <div
        class="field"
      >
        <label
          for="lastName"
        >
          Last name
        </label>
        <input
          class=""
          data-testid="lastNameInput"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="topicOptions"
    >
      <fieldset>
        <div
          class="floatBlock"
        >
          <label
            for="topic_travel"
          >
            <input
              data-testid="topic_travelRadio"
              id="topic_travel"
              name="topic"
              type="radio"
              value="travel"
            />
            Travel
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_cars"
          >
            <input
              data-testid="topic_carsRadio"
              id="topic_cars"
              name="topic"
              type="radio"
              value="cars"
            />
            Cars
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_wildlife"
          >
            <input
              data-testid="topic_wildlifeRadio"
              id="topic_wildlife"
              name="topic"
              type="radio"
              value="wildlife"
            />
            Wildlife
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_technology"
          >
            <input
              data-testid="topic_technologyRadio"
              id="topic_technology"
              name="topic"
              type="radio"
              value="technology"
            />
            Technology
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_other"
          >
            <input
              data-testid="topic_otherRadio"
              id="topic_other"
              name="topic"
              type="radio"
              value="other"
            />
            Other
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="row"
    >
      <div
        class="field"
      />
    </div>
    <div
      class="row"
    >
      <button
        class="button"
        data-testid="submitBtn"
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</div>
`;

exports[`Entry component When form 'Other' topic selected, other input appears 1`] = `
<div>
  <form>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <label
          for="firstName"
        >
          First name
        </label>
        <input
          class=""
          data-testid="firstNameInput"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
          value=""
        />
      </div>
      <div
        class="field"
      >
        <label
          for="lastName"
        >
          Last name
        </label>
        <input
          class=""
          data-testid="lastNameInput"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="topicOptions"
    >
      <fieldset>
        <div
          class="floatBlock"
        >
          <label
            for="topic_travel"
          >
            <input
              data-testid="topic_travelRadio"
              id="topic_travel"
              name="topic"
              type="radio"
              value="travel"
            />
            Travel
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_cars"
          >
            <input
              data-testid="topic_carsRadio"
              id="topic_cars"
              name="topic"
              type="radio"
              value="cars"
            />
            Cars
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_wildlife"
          >
            <input
              data-testid="topic_wildlifeRadio"
              id="topic_wildlife"
              name="topic"
              type="radio"
              value="wildlife"
            />
            Wildlife
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_technology"
          >
            <input
              data-testid="topic_technologyRadio"
              id="topic_technology"
              name="topic"
              type="radio"
              value="technology"
            />
            Technology
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_other"
          >
            <input
              data-testid="topic_otherRadio"
              id="topic_other"
              name="topic"
              type="radio"
              value="other"
            />
            Other
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <label
          for="otherTopic"
        >
          Other topic
        </label>
        <input
          data-testid="otherTopicInput"
          id="otherTopic"
          name="otherTopic"
          placeholder="Other topic"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <button
        class="button"
        data-testid="submitBtn"
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</div>
`;

exports[`Entry component When form completed and submit clicked, setDetails function is called 1`] = `
<div>
  <form>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <label
          for="firstName"
        >
          First name
        </label>
        <input
          class=""
          data-testid="firstNameInput"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
          value="Test"
        />
      </div>
      <div
        class="field"
      >
        <label
          for="lastName"
        >
          Last name
        </label>
        <input
          class=""
          data-testid="lastNameInput"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
          value="User"
        />
      </div>
    </div>
    <div
      class="topicOptions"
    >
      <fieldset>
        <div
          class="floatBlock"
        >
          <label
            for="topic_travel"
          >
            <input
              data-testid="topic_travelRadio"
              id="topic_travel"
              name="topic"
              type="radio"
              value="travel"
            />
            Travel
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_cars"
          >
            <input
              data-testid="topic_carsRadio"
              id="topic_cars"
              name="topic"
              type="radio"
              value="cars"
            />
            Cars
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_wildlife"
          >
            <input
              data-testid="topic_wildlifeRadio"
              id="topic_wildlife"
              name="topic"
              type="radio"
              value="wildlife"
            />
            Wildlife
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_technology"
          >
            <input
              data-testid="topic_technologyRadio"
              id="topic_technology"
              name="topic"
              type="radio"
              value="technology"
            />
            Technology
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_other"
          >
            <input
              data-testid="topic_otherRadio"
              id="topic_other"
              name="topic"
              type="radio"
              value="other"
            />
            Other
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="row"
    >
      <div
        class="field"
      />
    </div>
    <div
      class="row"
    >
      <button
        class="button"
        data-testid="submitBtn"
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</div>
`;

exports[`Entry component When form partly completed and submit clicked, validation fires 1`] = `
<div>
  <form>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <label
          for="firstName"
        >
          First name
        </label>
        <input
          class=""
          data-testid="firstNameInput"
          id="firstName"
          name="firstName"
          placeholder="First name"
          type="text"
          value=""
        />
      </div>
      <div
        class="field"
      >
        <label
          for="lastName"
        >
          Last name
        </label>
        <input
          class=""
          data-testid="lastNameInput"
          id="lastName"
          name="lastName"
          placeholder="Last name"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="topicOptions"
    >
      <fieldset>
        <div
          class="floatBlock"
        >
          <label
            for="topic_travel"
          >
            <input
              data-testid="topic_travelRadio"
              id="topic_travel"
              name="topic"
              type="radio"
              value="travel"
            />
            Travel
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_cars"
          >
            <input
              data-testid="topic_carsRadio"
              id="topic_cars"
              name="topic"
              type="radio"
              value="cars"
            />
            Cars
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_wildlife"
          >
            <input
              data-testid="topic_wildlifeRadio"
              id="topic_wildlife"
              name="topic"
              type="radio"
              value="wildlife"
            />
            Wildlife
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_technology"
          >
            <input
              data-testid="topic_technologyRadio"
              id="topic_technology"
              name="topic"
              type="radio"
              value="technology"
            />
            Technology
          </label>
        </div>
        <div
          class="floatBlock"
        >
          <label
            for="topic_other"
          >
            <input
              data-testid="topic_otherRadio"
              id="topic_other"
              name="topic"
              type="radio"
              value="other"
            />
            Other
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="row"
    >
      <div
        class="field"
      />
    </div>
    <div
      class="row"
    >
      <button
        class="button"
        data-testid="submitBtn"
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
</div>
`;
